--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="/minesweeper/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.3e18e0d1.js"></script>
-    <link rel="stylesheet" href="/assets/index.0190523c.css">
+    <script type="module" crossorigin src="/minesweeper/assets/index.3e18e0d1.js"></script>
+    <link rel="stylesheet" href="/minesweeper/assets/index.0190523c.css">
   </head>
   <body>
     <div id="root"></div>
